Fixes an issue reported in #488 where full recalc versions of count/sum rollups could incorrectly flip the sign on the parent's value rather than resetting it when all children are updated to non-matches

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -545,9 +545,9 @@ public without sharing abstract class RollupCalculator {
         return newVal;
       } else if (this.isReparented(calcItem, oldCalcItem)) {
         return matchesCurrent ? newVal : 0;
-      } else if (matchesCurrent && matchesOld == false && this.isChangedFieldCalc == false) {
+      } else if (matchesCurrent && matchesOld == false && this.isChangedFieldCalc == false && this.isFullRecalc == false) {
         return newVal;
-      } else if (matchesCurrent == false && matchesOld && this.isChangedFieldCalc == false) {
+      } else if (matchesCurrent == false && matchesOld && this.isChangedFieldCalc == false && this.isFullRecalc == false) {
         return oldVal * Decimal.valueOf(-1).setScale(oldVal.scale());
       }
 
