Further heap size optimizations in RollupEvaluator

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -1419,7 +1419,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   }
 
   private void cleanup() {
-    RollupEvaluator.clearConditionCache();
+    RollupEvaluator.clearCache();
     CACHED_CALC_ITEM_LOOKUPS = null;
     this.uniqueParentFields.clear();
     this.cleanupStaticVars();
