Fixes an issue reported by @windyo where count-based rollups going from one match to zero matches with a where clause on delete failed to decrement the parent value from 1 to 0

--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -480,7 +480,40 @@ private class RollupTests {
 
     System.assertEquals(1, mock.Records.size(), 'Records should have been populated based on metadata AFTER_INSERT');
     Account updatedAcc = (Account) mock.Records[0];
-    System.assertEquals(100100, updatedAcc.AnnualRevenue, 'SUM AFTER_INSERT should add the original cpaortunity amount to the default override based on CMDT');
+    System.assertEquals(100100, updatedAcc.AnnualRevenue, 'SUM AFTER_INSERT should add the original opp amount to the default override based on CMDT');
+  }
+
+  @IsTest
+  static void shouldOverrideNumberBasedDefaultBasedOnMetadataCount() {
+    Account acc = [SELECT Id, AnnualRevenue FROM Account];
+    Decimal originalValue = 1;
+    acc.AnnualRevenue = originalValue;
+    RollupAsyncProcessor.stubParentRecords = new List<SObject>{ acc };
+
+    ContactPointAddress cpa = new ContactPointAddress(ParentId = acc.Id, PreferenceRank = originalValue.intValue());
+    RollupTestUtils.DMLMock mock = RollupTestUtils.loadMock(new List<ContactPointAddress>{ cpa });
+    Rollup.rollupMetadata = new List<Rollup__mdt>{
+      new Rollup__mdt(
+        RollupFieldOnCalcItem__c = 'PreferenceRank',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        LookupFieldOnLookupObject__c = 'Id',
+        RollupFieldOnLookupObject__c = 'AnnualRevenue',
+        RollupOperation__c = 'COUNT',
+        CalcItem__c = 'ContactPointAddress',
+        FullRecalculationDefaultNumberValue__c = 0,
+        CalcItemWhereClause__c = 'PreferenceRank != ' + cpa.PreferenceRank
+      )
+    };
+
+    Rollup.apexContext = TriggerOperation.BEFORE_DELETE;
+    Test.startTest();
+    Rollup.runFromTrigger();
+    Test.stopTest();
+
+    System.assertEquals(1, mock.Records.size(), 'Records should have been populated based on metadata BEFORE_DELETE');
+    Account updatedAcc = (Account) mock.Records[0];
+    System.assertEquals(0, updatedAcc.AnnualRevenue, 'COUNT BEFORE_DELETE should reset to the default override based on CMDT');
   }
 
   @IsTest
